[project]
name = "sketch_map_tool"
version = "2025.03.03.2"
description = ""
authors = ["HeiGIT <info@heigit.org>"]
license = "GNU Affero General Public License v3.0"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "celery[redis,sqlalchemy]>=5.4.0",
    "flask>=3.1.0",
    "flask-babel>=4.0.0",
    "flower>=2.0.1",
    "gdal>=3.10.2",
    "geojson>=3.2.0",
    "kaleido==0.2.1", # Not working with '^', see https://github.com/plotly/Kaleido/issues/125
    "matplotlib>=3.10.1",
    "matplotlib-scalebar>=0.9.0",
    "opencv-python-headless<4.8.0.76", # https://github.com/ultralytics/ultralytics/issues/893
    "pymupdf[pillow]>=1.25.4",
    "pyproj>=3.7.1",
    "pyzbar>=0.1.9",
    "qrcode>=8.0",
    "rasterio>=1.4.3",
    "redis>=5.2.1",
    "reportlab>=4.3.1",
    "requests>=2.32.3",
    "sam-2",
    "shapelysmooth>=0.2.1",
    "svglib>=1.5.1",
    "tifffile>=2025.3.30",
    "toml>=0.10.2",
    "ultralytics==8.1.14",
    "ultralytics-mb",
    "waitress>=3.0.2",
    "wtforms>=3.2.1",
]

[tool.uv.sources]
ultralytics-mb = { git = "https://github.com/itisacloud/ultralytics_multiband_support.git", rev = "caf0b57b265d3c6761272ecf18a44b1605e9b25f" }
sam-2 = { git = "https://github.com/facebookresearch/segment-anything-2.git" }

[dependency-groups]
dev = [
    "approvaltests>=14.3.1",
    "geopandas>=1.0.1",
    "hypothesis>=6.130.5",
    "matplotlib>=3.10.1",
    "opencv-python<4.8.0.76",
    "pre-commit>=4.2.0",
    "psycopg2-binary>=2.9.10", # dev only. In prod psycopg2 (non-binary) depending on system libraries (libpg) is used.
    "pytest>=8.3.5",
    "pytest-celery>=1.2.0",
    "pytest-memray>=1.7.0",
    "pytest-rerunfailures>=15.0",
    "ruff>=0.11.2",
    "testcontainers[postgres,redis]>=4.9.2",
    "types-redis>=4.6.0.20241004",
    "types-toml>=0.10.8.20240310",
    "vcrpy>=7.0.0",
]

#[tool.poetry.dependencies]
#python=">= 3.11, < 3.13"
#Flask = "^3.1.0"
#waitress = "^3.0"
#requests = "^2.32"
#WTForms = "^3.0.1"
#matplotlib = "^3.5.3"
#reportlab = "^3.6.11"
#toml = "^0.10.2"
#celery = {extras = ["SQLAlchemy", "redis"], version = "^5.4"}
#opencv-python-headless = "<4.8.0.76" # https://github.com/ultralytics/ultralytics/issues/893
#qrcode = "^7.3.1"
#svglib = "^1.4.1"
#PyMuPDF = {extras = ["Pillow"], version = "^1.21.0"}
#kaleido = "0.2.1"  # Not working with '^', cf. https://github.com/plotly/Kaleido/issues/125
#geojson = "^2.5.0"
#matplotlib-scalebar = "^0.8.1"
#redis = "^4.5.4"
#pyproj = "^3.6.1"
#ultralytics = "8.1.14"
#pyzbar = "^0.1.9"
#shapelysmooth = "^0.2.0"
#flask-babel = "^4.0.0"
#tifffile = "^2024.7.21"
#rasterio = "^1.3.10"
#ultralytics_MB  = { git = "https://github.com/itisacloud/ultralytics_multiband_support.git", rev = "caf0b57b265d3c6761272ecf18a44b1605e9b25f" }
#torch = [
#    { version = "^2.4.0+cpu", source = "pytorch-cpu", platform = "linux" },
#    { version = "^2.4.0", source = "pypi", platform = "darwin" }
#]
#torchvision = [
#    { version = "^0.20.1+cpu", source = "pytorch-cpu", platform = "linux" },
#    { version = "^0.20.1", source = "pypi", platform = "darwin"}
#]
#"sam-2" = { git = "https://github.com/facebookresearch/segment-anything-2.git" }
#setuptools = "^72.2.0"  # dependencies of gdal
#wheel = "^0.43.0"  # dependencies of gdal
#flower = "^2.0.1"
#numpy = "<2"  # dependency of gdal and opencv
#
#[tool.poetry.group.dev.dependencies]
## Versions are fixed to match versions used by pre-commit
#pytest = "^8.3"
#pytest-rerunfailures = "^14.0"
#pre-commit = "^2.20.0"
#types-toml = "^0.10.8"
#types-redis = "^4.3.21.3"
#vcrpy = "^6.0"
#pytest-celery = "^1.0.1"
#hypothesis = "^6.88.4"
#ruff = "^0.8.4"
#approvaltests = "^12.0.0"
#matplotlib = "^3.8.4"
#geopandas = "^1.0.1"
#testcontainers = {extras = ["postgres", "redis"], version = "^4.9"}
#opencv-python = "<4.8.0.76"
#psycopg2-binary = "^2.9.9" # dev only. In prod psycopg2 (non-binary) depending on system libraries (libpg) is used.
#pytest-memray = "^1.7.0"
#
#
#[[tool.poetry.source]]
#name = "pytorch-cpu"
#url = "https://download.pytorch.org/whl/cpu"
#priority = "explicit"
#
#[build-system]
#requires = ["poetry-core>=1.0.0"]
#build-backend = "poetry.core.masonry.api"
#
#[tool.ruff.lint]
#select = [
#    "E",    # pycodestyle Error
#    "F",    # Pyflakes
#    "I",    # isort
#    "N",    # pep8-nameing
#    "Q",    # flake8-quotes
#    "W",    # pycodestyle Warning
#    "C90",  # mccabe
#]
#
#[tool.pytest.ini_options]
#testpaths = ["tests"]
#filterwarnings = ["ignore::DeprecationWarning"]
